# ByteForce

./: Dockerfile  README.md  app.py  pyproject.toml  run.sh
notebooks/: data_expl.ipynb  openai_expl.ipynb
streamlit_demo/: chat_api_conn.py  chat_streamlit.py  streamlit_mockup.py
